0.495 2023-11-14
  [Bug Fix]
    * Fix the bug that the error handling of the connect method in the Sys::Socket does not work well.
  [Incompatible Changes]
    * Remove the connect_raw method in the Sys::Socket class.
    * Remove the getaddrinfo_raw method in the Sys::Socket class.
    * Remove the getnameinfo_raw method in the Sys::Socket class.
0.494 2023-11-12
  [Prerequirement Changes]
    * Require SPVM 0.989060.
  [Test Improvement]
    * Tests of sockets becomes more relaiable.
0.493 2023-10-02
  [Requirement Changes]
    * Require SPVM 0.989047.
  [Internal Changes]
    * Use new native APIs.
  [Exception Message Changes]
    * Improve English of exception messages.
  [Document Changes]
    * Improve the formats of documents.
  [New Features]
    * Add the spvm_stdin method to the Sys::IO class.
    * Add the spvm_stdout method to the Sys::IO class.
    * Add the spvm_stderr method to the Sys::IO class.
  [Incompatible Changes]
    * The STDIN method in the Sys class retruns the return value of the spvm_stdin method in the Sys::IO class.
    * The STDOUT method in the Sys class retruns the return value of the spvm_stdout method in the Sys::IO class.
    * The STDERR method in the Sys class retruns the return value of the spvm_stderr method in the Sys::IO class.
    * The no_need_free field in the Sys::IO::FileStream class is renamed to no_close.
    * The fdopen method in the Sys::IO throws an exception.
    
      $fd must be greater than or equal to 0. Otherwise an exception is thrown.
  [Bug Fix]
    * Fix the test bug that tests of Sys::IO on Windows does not work well.
0.492 2023-09-18
  [Incompatibe Changes]
    * Remove the readline method in the Sys::IO class. Use the readline method in the Sys class.
0.491 2023-09-13
  [New Features]
    * The following methods in the Sys class are added.
    
      static method say : int ($stream : Sys::IO::FileStream, $string : string);

      static method STDIN : Sys::IO::FileStream ();
