@@ -148,8 +148,6 @@ class Sys::IO {
   
   native static method utime : int ($filename : string, $times : Sys::IO::Utimbuf);
   
-  native static method access_raw : int ($pathname : string, $mode : int);
-  
   native static method access : int ($pathname : string, $mode : int);
   
   native static method faccessat_raw : int ($dirfd : int, $pathname : string, $mode : int, $flags : int);
